fixed some text alignment issues, just minor adjustments left

--- a/src/index.css
+++ b/src/index.css
@@ -146,6 +146,8 @@ footer {
   background-color: black;
   padding-bottom: 25px;
   color: white;
+  a:link{color: white;}
+  a:visited{color: white;}
 }
 
 footer h3 {
@@ -205,6 +207,26 @@ footer h3 {
 
 /* Contact form styling */
 
+.kontakt-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+  flex: 1;
+  max-width: 450px;
+  margin-top: -2rem;
+}
+
+.kontakt-text h2 {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.kontakt-text p {
+  text-align: left;
+  max-width: 90%;
+}
+
 .form-sida {
   display: flex;
   flex-direction: column;
@@ -219,9 +241,11 @@ footer h3 {
 
 .form-cols {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: row;
-  padding-left: 20px;
+  padding: 0 2rem;
+  gap: 3rem;
+  justify-content: center;
 }
 
 
@@ -231,36 +255,44 @@ footer h3 {
 
   /* just to fix text on desktop*/
   .form-cols p {
-    max-width: 50%;
+    max-width: 100%;
     font-size: larger;
-    transform: translateY(-100%);
-    padding-left: 1rem;
+    padding-left: 0;
   }
 }
 
 /* Kontakt sida */
 .kontakt-sida h2 {
   color: white;
+   opacity: 0;
+  transform: translateY(40px);
+  animation: fadeUp 1.2s ease-out forwards;
   /*color: black;*/
 }
 
 .kontakt-sida {
-  font-weight: 500;
-  font-size: 20px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+ display: flex;
+  justify-content: center;
+  width: 100%;
   margin-top: -2rem;
-  padding-top: 80px;
+  color: white;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
 }
 
 
 .kontakt-formular h2 {
-  transform: translateX(18%);
+  text-align: center;
+}
+
+.kontakt-formular h3{
+  text-align: center;
+  font-size: 25px;
 }
 
 .kontakt-formular {
-  width: 100%;
+flex: 1;
   max-width: 500px;
-  margin: 2rem auto;
+  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -271,7 +303,6 @@ footer h3 {
   color: white;
   padding: 2rem;
   border-radius: 8px;
-  flex: 1;
 }
 
 
@@ -331,6 +362,7 @@ footer h3 {
     padding-left: 1rem;
     text-align: center;
   }
+  
 
   .form-cols {
     display: flex;
@@ -357,6 +389,7 @@ footer h3 {
     padding: 1rem;
     padding-right: 2rem;
   }
+
 
   .kontakt-formular input,
   .kontakt-formular textarea {
@@ -507,6 +540,12 @@ footer h3 {
 .lager-sida {
   margin-top: -1.2rem;
 }
+
+.lager-sida h2{
+   opacity: 0;
+  transform: translateY(40px);
+  animation: fadeUp 1.2s ease-out forwards;
+}
 /*
 
 .IframeBox {
@@ -553,6 +592,7 @@ footer h3 {
   position: relative;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
   margin-top: -1.2rem;
+  padding: 3rem;
 }
 
 .salj-sida::before {
@@ -566,6 +606,12 @@ footer h3 {
 .salj-sida>* {
   position: relative;
   z-index: 1;
+}
+
+.salj-sida h2{
+   opacity: 0;
+  transform: translateY(40px);
+  animation: fadeUp 1.2s ease-out forwards;
 }
 
 @media (max-width: 768px) {
